[gd_scene load_steps=11 format=2]

[ext_resource path="res://images/sound_on.png" type="Texture" id=1]
[ext_resource path="res://main_theme.tres" type="Theme" id=2]
[ext_resource path="res://images/logo.png" type="Texture" id=3]
[ext_resource path="res://views/page_background.gd" type="Script" id=4]
[ext_resource path="res://sound/hover_crumple.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/cotham-sans/cotham_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://fonts/bricktown/bg_topbar_title.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/cotham-sans/cotham_20.tres" type="DynamicFont" id=8]
[ext_resource path="res://images/logo_focus.png" type="Texture" id=9]
[ext_resource path="res://images/logo_press.png" type="Texture" id=10]

[node name="page_background" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hover_crumple" parent="." instance=ExtResource( 5 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 760.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 38.0
rect_min_size = Vector2( 50, 0 )
focus_neighbour_left = NodePath("../sound_toggle")
focus_neighbour_right = NodePath("../sound_toggle")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="game_title" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 611.0
margin_bottom = 38.0
focus_next = NodePath("../language")
focus_previous = NodePath("../logo")
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "GAME_NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="language" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 615.0
margin_right = 724.0
margin_bottom = 38.0
rect_min_size = Vector2( 80, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "Language"
flat = true

[node name="sound_toggle" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 728.0
margin_right = 760.0
margin_bottom = 38.0
focus_neighbour_left = NodePath("../logo")
focus_neighbour_right = NodePath("../logo")
texture_normal = ExtResource( 1 )
stretch_mode = 5

[node name="top_separator" type="HSeparator" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 760.0
margin_bottom = 46.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 760.0
margin_bottom = 66.0

[node name="date" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 378.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Oct. 10, 2021"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="top_credit" type="RichTextLabel" parent="VBoxContainer/HBoxContainer2"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "GAME_BY_BB"
text = "GAME_BY_BB"
scroll_active = false

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 760.0
margin_bottom = 74.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/logo" to="." method="_on_logo_pressed"]
[connection signal="item_selected" from="VBoxContainer/HBoxContainer/language" to="." method="_on_lang_update"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/language" to="hover_crumple" method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/sound_toggle" to="." method="_on_sound_toggle_pressed"]
[connection signal="meta_clicked" from="VBoxContainer/HBoxContainer2/top_credit" to="." method="_on_top_credit_meta_clicked"]
